[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "boot",
]

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = { path = "../bootloader" } # replace this with a version number
x86_64 = "0.14.2"
uart_16550 = "0.2.14"
spin = { version = "0.9.0", features = ["lazy"] }
font8x8 = { version = "0.2.7", default-features = false, features = ["unicode"], optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[features]
default = ["font8x8"]